--- a/style/style.css
+++ b/style/style.css
@@ -87,7 +87,7 @@ body {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    background-image: url(bg.jpg);
+    background-image: url(../img/bg.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -231,8 +231,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-top: 4rem;
-    /* box-sizing: border-box; */
+    margin-top: 6rem;
     gap: 10px;
 }
 
@@ -242,9 +241,12 @@ body {
 }
 
 .menu-kelapa .row .row-kartu img {
-    border-radius: 15px;
-    width: 511px;
-    height: 283px;
+    /* border-radius: 15px; */
+    /* width: 511px;
+    height: 283px; */
+    width: 100%;
+    height: 80%;
+    border-radius: 10px;
     object-fit: cover;
 }
 
