loping and css display

--- a/style/style.css
+++ b/style/style.css
@@ -230,22 +230,19 @@ body {
 .menu-kelapa .row {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    margin-top: 6rem;
-    gap: 10px;
+    gap: 1rem;
 }
 
-.menu-kelapa .row .row-kartu {
-    text-align: center;
-    margin-bottom: 2rem;
+.row-kartu {
+    background-color: rgb(39, 168, 39);
+    padding: 8px 12px;
+    border-radius: 10px;
+    box-shadow: 3px 3px 3px rgb(15, 15, 15);
 }
 
 .menu-kelapa .row .row-kartu img {
-    /* border-radius: 15px; */
-    /* width: 511px;
-    height: 283px; */
-    width: 100%;
-    height: 80%;
+    width: 410px;
+    height: 290px;
     border-radius: 10px;
     object-fit: cover;
 }
@@ -253,6 +250,11 @@ body {
 .menu-kelapa .row .row-kartu h3 {
     font-size: 23px;
     margin: 0.5rem auto;
+    color: rgb(27, 27, 27);
+}
+
+.row-kartu p {
+    width: 410px;
 }
 
 
@@ -279,11 +281,6 @@ body {
     padding: 5rem 2rem;
     text-align: center;
 }
-
-
-/* .contact form  {
-  align-items: center;
-} */
 
 .contact form h2 {
     padding-top: -10px;
@@ -340,7 +337,6 @@ footer .link a:hover {
 footer .link a {
     padding: 0.7rem 1rem;
     color: white;
-    /* word-spacing: 1rem; */
 }
 
 footer .copyright {
@@ -355,106 +351,3 @@ footer .copyright p {
 
 
 /* Footer End */
-
-
-/* contact end */
-
-
-/* Responsif */
-
-
-/* Laptop */
-
-@media (max-width: 1200px) {
-    html {
-        font-size: 80%;
-    }
-    .hero .contain p {
-        font-size: 18px;
-    }
-}
-
-
-/* Tablet */
-
-@media (max-width: 800px) {
-    html {
-        font-size: 65%;
-    }
-    #menu {
-        display: inline-block;
-    }
-    .nav .menu {
-        position: absolute;
-        top: 100%;
-        right: -100%;
-        background-color: rgb(253, 239, 214);
-        width: 30rem;
-        height: 100vh;
-        transition: all 0.5s;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .nav .menu a {
-        background-color: rgb(0, 157, 0);
-        margin: 1.5rem;
-        padding: 8px;
-        font-size: 1.5rem;
-    }
-    .nav .menu a:hover {
-        color: white;
-    }
-    .nav .menu.active {
-        right: 0;
-    }
-    .about .row {
-        flex-wrap: wrap;
-    }
-    .about h2,
-    .menu-kelapa h2 {
-        font-size: 25px;
-    }
-    .about .content-kami {
-        padding: 0;
-        margin-top: -45px;
-    }
-    .contact .row-maps {
-        flex-wrap: wrap;
-    }
-    .contact .row-maps .map {
-        height: 30rem;
-    }
-    .contact .row-maps form {
-        padding-top: 10px;
-    }
-    footer .link {
-        font-size: 1.5rem;
-    }
-    footer .copyright p {
-        font-size: 1.2rem;
-    }
-}
-
-
-/* Mobile Phone */
-
-@media (max-width: 450px) {
-    html {
-        font-size: 55%;
-    }
-    .hero .contain {
-        margin: auto 5%;
-    }
-    .about h2,
-    .menu-kelapa h2 {
-        font-size: 25px;
-    }
-    .about .content-kami {
-        padding: 0;
-        margin-top: -20px;
-    }
-    .about .content-kami h3 {
-        font-size: 25px;
-    }
-}
